<resources>
    <string name="app_name">quimica</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">WELCOME</string>
    <string name="atomic">ATOMIC</string>
    <string name="atomo">ATOMO</string>
    <string name="masa">MASA</string>
    <string name="title_activity_atom">Atom</string>
    <string name="estr">ESTRUCTURA DEL ATOMO</string>
    <string name="title_activity_masa">Masa</string>
    <string name="entrar">ENTRAR</string>
    <string name="protones">PROTONES</string>
    <string name="resul">RESULTADO</string>
    <string name="neutrones">NEUTRONES</string>
    <string name="title_activity_neutrones">Neutrones</string>
    <string name="masaat">MASA ATOMICA</string>
    <string name="title_activity_login">Login</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellido</string>
    <string name="email">Email</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="ok">LISTO</string>
    <string name="title_activity_login2">login2</string>
    <string name="title_activity_inicio">Inicio</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
