<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/md_amber_700"
    tools:context=".login"
    android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".20"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/md_white_1000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/atomic"
                android:textSize="@dimen/tit"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_weight=".40">

            <EditText
                android:id="@+id/nomb"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:textColorHint="@color/md_white_1000"
                android:textColor="@color/md_white_1000"
                android:textSize="@dimen/large"/>

            <EditText
                android:id="@+id/apel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/apellidos"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/md_white_1000"
                android:textColorHint="@color/md_white_1000"
                android:textSize="@dimen/large"/>

            <EditText
                android:id="@+id/email"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/md_white_1000"
                android:textColor="@color/md_white_1000"
                android:textSize="@dimen/large"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <Button
                android:background="@color/md_amber_700"
                android:id="@+id/entrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entrar"
                android:textColor="@color/md_white_1000"
                android:gravity="center" />

        </LinearLayout>

</LinearLayout>
