<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.tapia.jesus.quimica.Login2"
    android:orientation="vertical"
    android:background="@color/md_yellow_600">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".15"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="@dimen/tit"
            android:gravity="center"
            android:textColor="@color/md_white_1000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_weight=".20">

        <TextView
            android:id="@+id/wel"
            android:gravity="center"
            android:textSize="@dimen/xx_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textColor="@color/md_white_1000"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/sigui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/siguiente"
            android:background="@color/md_yellow_600"
            android:textColor="@color/md_white_1000"/>

    </LinearLayout>

</LinearLayout>
