<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/md_light_blue_A400"
    android:orientation="vertical"
    tools:context="com.tapia.jesus.quimica.Inicio">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_weight=".10">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="@dimen/tit"
            android:gravity="center"
            android:textColor="@color/md_white_1000"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/boton2"
        android:orientation="vertical"
        android:layout_weight=".1">

        <Button
            android:padding="@dimen/pading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bmasa"
            android:text="@string/masa"
            android:textSize="@dimen/xx_large"
            android:textColor="@color/md_white_1000"
            android:background="@color/md_light_blue_A400"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_weight=".20">

        <Button
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/neutrones"
            android:textSize="42sp"
            android:id="@+id/bneu"
            android:textColor="@color/md_white_1000"
            android:background="@color/md_light_blue_A400"/>

    </LinearLayout>


</LinearLayout>
